--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,1 +1,3 @@
 // @include font-face("Muller", "../fonts/MullerRegular", 400, normal);
+ @include font-face("SoLow-Trial", "../fonts/SoLowRegular-Web", 400, normal);
+ @include font-face("SoLow-Trial", "../fonts/SoLowItalic-Web", 400, italic);
