--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -1,12 +1,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link class="favicon-link" rel="shortcut icon" href="favicon-4.ico" type="image/x-icon">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#111111">
-  <title>New Site</title>
-  <link rel="preload" href="fonts/MullerRegular.woff2" as="font" type="font/woff2" crossorigin>
+  <title>01-team</title>
+  <link rel="preload" href="fonts/SoLowItalic-Web.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/SoLowRegular-Web.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="css/vendor.css">
-  <link rel="stylesheet" href="css/main.css">
-  <script defer src="js/main.js"></script>
+  <link rel="stylesheet" href="css/main.css?2v">
+  <script defer src="js/main.js?2v"></script>
 </head>
+
