--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -1,5 +1,12 @@
 html {
   box-sizing: border-box;
+
+  ::-webkit-scrollbar {
+    width: 0;
+  }
+
+  scrollbar-width: thin;
+  scrollbar-color: var(--bg-color) var(--bg-color);
 }
 
 *,
@@ -10,7 +17,7 @@ html {
 
 .page {
   height: 100%;
-  font-family: var(--font-family, sans-serif);
+  font-family: var(--font-family);
   -webkit-text-size-adjust: 100%;
 }
 
@@ -18,21 +25,28 @@ html {
   margin: 0;
   min-width: 320px;
   min-height: 100%;
+  font-family: var(--font-family);
   font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  background-color: var(--bg-color);
+  color: var(--main-font-color);
 }
 
+
 img {
-  height: auto;
-  max-width: 100%;
+  height: 100%;
+  width: 100%;
   object-fit: cover;
 }
 
 a {
   text-decoration: none;
+  color: var(--main-font-color);
 }
 
 .site-container {
-  overflow: hidden; // если используете на сайте position: sticky - уберите эту настройку
+  //overflow: hidden; // если используете на сайте position: sticky - уберите эту настройку
 }
 
 .is-hidden {
@@ -51,6 +65,19 @@ a {
   margin: 0;
   padding: 0;
 }
+
+a {
+  transition: all 0.2s ease;
+}
+
+button {
+  transition: all 0.2s ease;
+}
+
+svg {
+  transition: all 0.2s ease;
+}
+
 
 .input-reset {
   -webkit-appearance: none;
@@ -104,4 +131,15 @@ a {
 
 .page--ios .dis-scroll {
   position: relative;
+}
+
+.container--width {
+  padding-left: max(var(--container-offset), (100% - var(--content-width)) / 2);
+}
+
+.container--width--other {
+  //@include mobile {
+  //  padding-left: max(var(--container-offset), (0%) / 2);
+  //  display: inline-block;
+  //}
 }
