--- a/src/partials/sectionHomePartners.html
+++ b/src/partials/sectionHomePartners.html
@@ -1,20 +1,43 @@
 <div class="sectionHomePartners">
   <div class="sectionHomePartners__container">
-    <div class="container">
+
       <div class="sectionHomePartners__content">
+        <div class="container">
         <div class="subtitleC primary centered">
           our Partners:
         </div>
+      </div>
         <div class="blockSlider blockSlider-partners">
-          <div class="swiper swiper-partners">
-            <div class="swiper-wrapper">
-               <div class="swiper-slide">
+          <div class="sliderC primary sliderC-partners">
+            <div class="sliderC-wrapper sliderC-wrapper-partners">
+              <div class="sliderC-wrapper-container">
+                <div class="sliderC-slide">
+                  <a href="https://oddrepublic.io/" target="_blank">
+                    <span class="sliderC__animation">
+                      <img src="./img/logo-partners-1.png" alt="">
+                    </span>
+                  </a>
+                </div>
+                <div class="sliderC-slide">
+                  <a href="https://collab.art/" target="_blank">
+                    <span class="sliderC__animation">
+                      <img src="./img/logo-partners-2.png" alt="">
+                    </span>
+                  </a>
 
-               </div>
+                </div>
+                <div class="sliderC-slide">
+                  <a href="https://www.flowtec.no/" target="_blank">
+                    <span class="sliderC__animation">
+                      <img src="./img/logo-partners-3.png" alt="">
+                    </span>
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+
     </div>
   </div>
 </div>
